Archive2/e1/b8ab4ea3b8e161/output
main.cpp:15:31: error: expected '(' for function-style cast or type construction
    std::cout << int(unsigned char(mbs[i])) << ' ';
                     ~~~~~~~~ ^
main.cpp:14:18: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  for (int i=0; i<mbs.length(); ++i)
                ~^~~~~~~~~~~~~
1 warning and 1 error generated.
